Migrated from Spring Boot 2.3.3.RELEASE to 2.5.0
- Updated Java version to 11.
- Updated Spring Cloud to 2020.0.3.
- Migrated from Hystrix to Resilience4j.
- Migrated from legacy Spring Cloud Bootstrap to Spring Cloud Data
  import.